working changes till get a response from python