@@ -1,16 +1,26 @@
 package com.example.nursingrobotspringrest.utility;
 
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.ComponentScan;
+import org.springframework.core.io.FileSystemResource;
+import org.springframework.http.*;
 import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.util.HashMap;
+import java.util.Map;
+
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
+import org.springframework.web.client.RestTemplate;
+import org.springframework.web.multipart.MultipartFile;
+
 
 @Component
 @ComponentScan
@@ -23,48 +33,38 @@ public class OKHttpConnection {
     @Autowired
     public ApiConfiguration opencv;
 
+    @Autowired
+    FileResource fileService;
 
-    public StringBuffer sendRequest(){
-        try{
-            BufferedReader reader;
 
-            String line;
-            StringBuffer responseContent = new StringBuffer();
+    public String sendRequest(String file) {
+        String uploadedFile = fileService.getDirectory() + file;
+//        HttpClient client = HttpClient.newHttpClient();
 
-            URL url  = new URL(opencv.getApi());
-            connection = (HttpURLConnection) url.openConnection();
+//        HttpRequest request = HttpRequest.newBuilder().uri(URI.create(opencv.getApi())).build();
 
-            // Request setup
-            connection.setRequestMethod("GET");
-            connection.setConnectTimeout(8000);
-            connection.setReadTimeout(8000);
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.MULTIPART_FORM_DATA);
 
-            int status = connection.getResponseCode();
+        MultiValueMap<String, Object> body
+                = new LinkedMultiValueMap<>();
+        body.add("file", new FileSystemResource(uploadedFile));
 
-            if(status > 299){
-                reader = new BufferedReader(new InputStreamReader(connection.getErrorStream()));
-                while((line = reader.readLine()) != null){
-                    responseContent.append(line);
-                }
-                reader.close();
-            }else {
-                reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                while((line = reader.readLine()) != null){
-                    responseContent.append(line);
-                }
-                reader.close();
-            }
+        HttpEntity<MultiValueMap<String, Object>> requestEntity
+                = new HttpEntity<>(body, headers);
 
-            return  responseContent;
-        }catch (MalformedURLException ex){
-            ex.printStackTrace();
-        }catch(IOException ex){
-            ex.printStackTrace();
-        } finally {
-            connection.disconnect();
-        }
+        String serverUrl = opencv.getApi();
 
-        return null;
+        RestTemplate restTemplate = new RestTemplate();
+        ResponseEntity<String> response = restTemplate
+                .postForEntity(serverUrl, requestEntity, String.class);
+
+        System.out.println(response);
+
+
+        return "Ok";
+
+
     }
 
 }
